--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.13'
+    compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.5'
     compile 'org.jsoup:jsoup:1.11.2'
     compile 'org.elasticsearch:elasticsearch:6.2.3'
     compile 'org.elasticsearch.client:elasticsearch-rest-client:6.2.3'
